--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
-    <meta
-            name="description"
-            content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="logo192.png"/>
+    <meta name="description" content="Web site created using create-react-app. Displays the CV of Younes Belkouchi"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/apple-touch-icon.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
